--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ pluggy==0.12.0
 py==1.8.0
 pyicloud==0.9.1
 pyparsing==2.4.0
-pytest==5.0.1
+pytest>=4.6.4
 pytz==2019.1
 requests==2.22.0
 six==1.12.0
