--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ pyicloud==0.9.1
 pyparsing==2.4.0
 pytest>=4.6.4
 pytz==2019.1
-requests==2.22.0
+requests>=2.21.0
 six==1.12.0
 tzlocal==1.5.1
 urllib3==1.25.3
