--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ python:
   - "3.8-dev"  # 3.8 development branch
   - "nightly"  # nightly build
 install:
+  - pip install codecov coverage
   - pip install -r requirements.txt
 script:
-  - python -m pytest tests
+  - coverage run -m pytest
+after_success:
+  - codecov
