--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,37 @@
+aspy.yaml==1.3.0
 atomicwrites==1.3.0
 attrs==19.1.0
 bitstring==3.1.6
 certifi==2019.6.16
+cfgv==2.0.1
 chardet==3.0.4
 click==6.7
+colorama==0.4.1
 future==0.17.1
+identify==1.4.6
 idna==2.8
 importlib-metadata==0.18
 keyring==8.7
 keyrings.alt==1.3
 mock==3.0.5
 more-itertools==7.1.0
+nodeenv==1.3.3
 packaging==19.0
 pluggy==0.12.0
 py==1.8.0
 pyicloud==0.9.1
 pyparsing==2.4.0
-pytest>=4.6.4
+PyQt5==5.13.0
+PyQt5-sip==4.19.18
+pytest==5.0.1
 pytz==2019.1
-requests>=2.21.0
+pywin32-ctypes==0.2.0
+PyYAML==5.1.2
+requests==2.22.0
 six==1.12.0
+toml==0.10.0
 tzlocal==1.5.1
 urllib3==1.25.3
+virtualenv==16.7.2
 wcwidth==0.1.7
 zipp==0.5.2
