--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - pip install -r requirements.txt
 script:
   #- coverage run -m pytest
-  - coverage run -m pytest tests -k "xxx"
+  - coverage run -m pytest tests
 #ignore:
 #- tests/**/*
 after_success:
