--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ pyicloud==0.9.1
 pyparsing==2.4.0
 PyQt5==5.13.0
 PyQt5-sip==4.19.18
-pyspark==2.4.0
+#pyspark==2.4.0
 pytest==5.0.1
 pytz==2019.1
 PyYAML==5.1.2
