--- a/requirements.txt
+++ b/requirements.txt
@@ -18,9 +18,8 @@ pluggy==0.12.0
 py==1.8.0
 pyicloud==0.9.1
 pyparsing==2.4.0
-#PyQt5==5.13.0
-#PyQt5-sip==4.19.18
-#pyspark==2.4.0
+PyQt5==5.13.0
+PyQt5-sip==4.19.18
 pytest==5.0.1
 pytz==2019.1
 PyYAML==5.1.2
