Changed pytest cmd line

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ install:
   - pip install codecov coverage
   - pip install -r requirements.txt
 script:
-  - coverage run -m pytest
-  #- coverage run -m pytest tests
+  #- coverage run -m pytest
+  - pytest --cov-report=xml tests
 ignore:
 - tests/**/*
 after_success:
