--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - pip install -r requirements.txt
 script:
   #- coverage run -m pytest
-  - pytest --cov-report=xml tests
+  - py.test --cov-report=xml --cov=pi-cloud-frame tests
 ignore:
 - tests/**/*
 after_success:
