--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,11 @@ python:
   - "3.8-dev"  # 3.8 development branch
   - "nightly"  # nightly build
 install:
-  - pip install codecov coverage
+  - pip install codecov pytest-cov
   - pip install -r requirements.txt
 script:
   #- coverage run -m pytest
-  - py.test --cov-report=xml --cov=pi-cloud-frame tests
+  - pytest --cov-report=xml --cov=pi-cloud-frame tests
 ignore:
 - tests/**/*
 after_success:
