--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - pip install -r requirements.txt
 script:
   #- coverage run -m pytest
-  - pytest --cov-report=xml --cov=tests
+  - pytest --cov-report=xml --cov=. tests/
 ignore:
 - tests/**/*
 after_success:
