--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ python:
   - "3.6-dev"  # 3.6 development branch
   - "3.7"
   - "3.7-dev"  # 3.7 development branch
-  - "3.8-dev"  # 3.8 development branch
+  - "3.8"
+#  - "3.8-dev"  # 3.8 development branch
   - "nightly"  # nightly build
 install:
   - pip install codecov pytest-cov
