--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -14,8 +14,9 @@ name = 'python'
 enabled = true
 runtime_version = '3.x.x'
 
-[analyzers.meta]
-max_line_length = 150
+  [analyzers.meta]
+  max_line_length = 150
 
+[[analyzers]]
 name = "test-coverage"
 enabled = true
