--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ click>=6.7
 exifread>=2.1.2
 future>=0.17.1
 geopy>=1.20.0
-hurry.filesize==0.9
+hurry.filesize>=0.9
 idna>=2.8
 importlib-metadata>=0.18
 keyring>=8.7
@@ -17,7 +17,7 @@ more-itertools>=7.1.0
 packaging>=19.0
 Pillow>=6.0.0
 pluggy>=0.12.0
-psutil==5.6.3
+psutil>=5.6.3
 py>=1.8.0
 pyicloud>=0.9.1
 pyparsing>=2.4.0
