--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ python:
 #  - "3.8-dev"  # 3.8 development branch
 #  - "nightly"  # nightly build
 install:
-  - pip install codecov pytest-cov
+  - pip install -r requirements_dev.txt
   - pip install -r requirements.txt
 script:
   - pytest --cov-report=xml --cov=.
