--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+click
 Pillow>=6.0.0
 PyQt5-sip>=4.19.18
 PyQt5>=5.13.0
@@ -9,3 +10,5 @@ hurry.filesize>=0.9
 psutil>=5.6.3
 pyicloud>=0.9.1
 tqdm==4.36.1
+requests
+hurry.filesize==0.9
