--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-click==8.0.1
+click==7.1.1
 Pillow>=6.0.0
 PyQt5-sip>=4.19.18
 PyQt5>=5.13.0
@@ -7,8 +7,7 @@ exifread>=2.1.2
 future>=0.17.1
 geopy>=1.20.0
 psutil>=5.6.3
-pyicloud>=0.9.1
+pyicloud==0.10.2
 requests==2.25.1
-requests==2.22.0
 tqdm==4.62.2
 hurry.filesize==0.9
